--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,6 +1,6 @@
 .pie-pagina{
     width: 100%;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.678);
   }
   
   .pie-pagina .grupo-1{
@@ -51,7 +51,7 @@
     color: aqua;
   }
   .pie-pagina .grupo-2{
-    background-color: #0a1a2a;
+    background-color: #0c0c0c;
     padding: 15px 10px;
     text-align: center;
     color: #fff;
