--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -1,64 +1,91 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 /* incio */
 .box__inicio{
-    margin-top: 7.2rem;
+    margin-top: 8.3rem;
 }
-
 .box__img img{
+    margin: auto;
     width: 100%;
     height: 600px;
+    
+}
+.box__container-ini{
+    width: 100%;
+    margin-top: -500px;
+    position: absolute;
+    z-index: 0;
 }
 .box__message{
-    max-width: 1400px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin-top: -500px;
-    margin-left: 15%;
-}
-.box__publicidad{
     text-align: center;
-    padding-right: 200px;
+    gap: 20%;
+}
+
+/* titulo, text y button */
+.box__publicidad{
 }
 .box__publicidad h1{
-    font-size: 80px;
-    color: #fff6f6;
+    font-size: 5rem;
+    color: #f2eee9;
     font-weight: 700;
 }
 .box__publicidad p{
-    color: rgba(255, 255, 255, 0.795);
-    font-size: 25px;
+    padding-top: 2rem;
+    color: #f2eee3;
+    font-size: 1.5rem;
     font-weight: 600;
 }
-.box__publicidad h3{
-    color: #192b44;
-    font-weight: 700;
+.box__ver-Mas{
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+.box__ver-Mas button{
+    padding: 15px 25px;
+    border-radius: 25px;
+    border: none;
+    background-color: #868580;
+    box-shadow: 0 0 5px 5px #fff;
+}
+
+/* box video */
+.box__video{
+    border-radius: 25px;
+}
+.video-Y{
+    width: 600px;
+    height: 400px;
+    border-radius: 25px;
+    box-shadow: 0 0 5px 5px #fff;
 }
 
 /* card */
+.box__card img{
+    width: 200px;
+}
 .box__container-principal{
-    margin: 14rem 0;
+    max-width: 80%;
+    margin: auto;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 .box__container-card{
-    margin: 2rem 4rem;
     border: solid;
     border-radius: 25px;
-    padding: 20px;
+    padding: 5px;
+    margin-bottom: 2rem;
 }
 .box__section-card{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     text-align: center;
-}
-.box__card{
-    border: solid;
-    border-radius: 25px;
-    padding: 20px;
-}
-.box__card img{
-    width: 200px;
-    border: solid;
-    border-radius: 20px;
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
 }
