--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -7,16 +7,17 @@
 /* incio */
 .box__inicio{
     margin-top: 8.3rem;
+    height: auto;
 }
 .box__img img{
     margin: auto;
     width: 100%;
-    height: 600px;
+    height: 80vh;
     
 }
 .box__container-ini{
     width: 100%;
-    margin-top: -500px;
+    margin-top: -600px;
     position: absolute;
     z-index: 0;
 }
@@ -60,8 +61,8 @@
     border-radius: 25px;
 }
 .video-Y{
-    width: 600px;
-    height: 400px;
+    width: 70vh;
+    height: 40vh;
     border-radius: 25px;
     box-shadow: 0 0 5px 5px #fff;
 }
@@ -69,18 +70,25 @@
 /* card */
 .box__card img{
     width: 200px;
+    border: 3px solid #a5a1a1;
+    border-radius: 25px;
 }
 .box__container-principal{
-    max-width: 80%;
+    max-width: 90%;
     margin: auto;
     padding-top: 5rem;
     padding-bottom: 5rem;
 }
 .box__container-card{
-    border: solid;
+    border: 3px solid #a5a1a1;
     border-radius: 25px;
-    padding: 5px;
+    padding: 10px;
     margin-bottom: 2rem;
+    background-image: url(../assets/img/images/bg-hero-desktop.svg);
+    background-color: hsl(207, 17%, 26%);
+}
+.box__container-card h3{
+    padding-bottom: 25px;
 }
 .box__section-card{
     display: flex;
@@ -88,4 +96,12 @@
     text-align: center;
     flex-wrap: wrap;
     margin-bottom: 2rem;
+    gap: 50px;
+}
+.box__card{
+    border: 3px solid #a5a1a1;
+    border-radius: 25px;
+    width: 300px;
+    height: 270px;
+    padding: 15px;
 }
