--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,6 +1,11 @@
 .pie-pagina{
     width: 100%;
     background-color: rgba(0, 0, 0, 0.678);
+    background-image: url(../assets/img/images/auto-deportivo2.webp);
+    background-color: rgba(31, 112, 112, 0.452);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
   }
   
   .pie-pagina .grupo-1{
@@ -29,10 +34,12 @@
     color: #fff;
     margin-bottom: 25px;
     font-size: 20px;
+    font-weight: 700;
   }
   .pie-pagina .grupo-1 .box p{
     color: #efefef;
     margin-bottom: 10px;
+    font-weight: 700;
   }
   
   .pie-pagina .grupo-1 .red-social a{
@@ -46,6 +53,7 @@
     background-color: #0d2033;
     text-align: center;
     transition: all 300ms ease;
+    font-weight: 700;
   }
   .pie-pagina .grupo-1 .red-social a:hover{
     color: aqua;
@@ -55,6 +63,7 @@
     padding: 15px 10px;
     text-align: center;
     color: #fff;
+    font-weight: 700;
   }
   
   .pie-pagina .grupo-2 small{
