--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -84,11 +84,16 @@
     border-radius: 25px;
     padding: 10px;
     margin-bottom: 2rem;
-    background-image: url(../assets/img/images/bg-hero-desktop.svg);
-    background-color: hsl(208, 10%, 37%);
+    background-image: url(../assets/img/images/auto-deportivo2.webp);
+    background-color: rgba(31, 112, 112, 0.452);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 .box__container-card h3{
     padding-bottom: 25px;
+    color: #f2eee3;
+    font-weight: 700;
 }
 .box__section-card{
     display: flex;
@@ -104,4 +109,8 @@
     width: 300px;
     height: 270px;
     padding: 15px;
+}
+.box__card h4, .box__card p{
+    color: #f2eee3;
+    font-weight: 700;
 }
