--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -6,6 +6,7 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    z-index: -1;
   }
   
   .pie-pagina .grupo-1{
