--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -89,6 +89,25 @@
     border-bottom: 4px solid yellow;
 }
 
+
+
+.cart {
+    cursor: pointer;
+  }
+  .cart span:nth-child(1) {
+    font-size: 2rem;
+    color: white;
+  }
+  .cart span:nth-child(2) {
+    padding: 0 3px;
+    background-color: red;
+    color: white;
+    font-weight: bolx;
+    border-radius: 5px;
+    position: relative;
+    top: -15px;
+  }
+
 /* ham */
 @media(min-width: 768px){
     .ham-burger{
