--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -38,11 +38,14 @@
 /* navinferior nav2*/
 .nav__inferior{
 }
-.search{
+.search2{
     text-align: center;
     border-radius: 25px;
     padding: 10px;
     border: none;
+}
+.ham-burger{
+    padding-right: 25px;
 }
 .nav__2{
     display: flex;
@@ -50,6 +53,9 @@
     align-items: center;
     background-color: rgba(51, 51, 51, 0.959);
     padding: .5rem 1rem;
+}
+.frm__search1{
+    display: none;
 }
 .nav__2 .links{
     display: flex;
@@ -108,7 +114,7 @@
     }
     #menu-links.active{
         display: flex;
-        justify-content: center;
+        justify-content: flex-start;
     }
     .nav-link span{
         color: rgba(247, 238, 238, 0.911);
@@ -118,15 +124,22 @@
     }
 }
 
-/* medidas */
-/* movile */
-@media(max-width: 380px){
-    .header{
-        width: 380px;
+@media(max-width: 770px){
+    .search2{
+        display: none;
     }
-}
-@media(max-width: 414px){
-    .header{
-        width: 414px;
+    .frm__search1{
+        display: flex;
+        font-size: 1rem;
+        justify-content: center;
+    }
+    .search1{
+        text-align: center;
+        border-radius: 25px;
+        padding: 1px 0;
+        border: none;
+    }
+    .nav__2{
+        padding: .7rem 1rem;
     }
 }
