--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -9,17 +9,21 @@
     margin-top: 8.3rem;
     height: auto;
 }
-.box__img img{
+.box__img{
+    background-image: url('../assets/img/images/backg2.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     margin: auto;
     width: 100%;
-    height: 80vh;
-    
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .box__container-ini{
     width: 100%;
-    margin-top: -600px;
-    position: absolute;
-    z-index: 0;
 }
 .box__message{
     display: flex;
@@ -27,19 +31,19 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 20%;
+    gap: 10%;
 }
 
 /* titulo, text y button */
 .box__publicidad{
-    padding: 20px;
+    width: 600px;
     background-color: #f1eeee25;
     border: none;
     border-radius: 25px;
     box-shadow: 0 0 5px 5px #fff;
 }
 .box__publicidad h1{
-    font-size: 5rem;
+    font-size: 4.5rem;
     color: #f2eee9;
     font-weight: 700;
     text-shadow: 7px 7px 7px #3b3b3b;
@@ -69,7 +73,7 @@
 }
 #ver-mas{
     width: 200px;
-    height: 60px;
+    height: 130px;
 }
 
 /* box video */
@@ -77,8 +81,8 @@
     border-radius: 25px;
 }
 .video-Y{
-    width: 70vh;
-    height: 40vh;
+    width: 600px;
+    height: 330px;
     border-radius: 25px;
     box-shadow: 0 0 5px 5px #fff;
 }
@@ -92,7 +96,7 @@
 .box__container-principal{
     max-width: 90%;
     margin: auto;
-    padding-top: 5rem;
+    padding-top: .5rem;
     padding-bottom: 5rem;
 }
 .box__container-card{
@@ -131,8 +135,3 @@
     font-weight: 700;
 }
 
-@media(max-width: 639px){
-    .video-Y{
-        width: 40vh;
-    }
-}
