--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,4 +1,5 @@
 .pie-pagina{
+    margin-top: 15rem;  
     width: 100%;
     background-color: rgba(0, 0, 0, 0.678);
     background-image: url(../assets/img/images/auto-deportivo2.webp);
