--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -102,7 +102,8 @@
 .box__container-card{
     border: 3px solid #a5a1a1;
     border-radius: 25px;
-    padding: 10px;
+    padding: 40px 10px;
+    padding-bottom: 3rem;
     margin-bottom: 2rem;
     background-image: url(../assets/img/images/auto-deportivo2.webp);
     background-color: rgba(31, 112, 112, 0.452);
@@ -127,8 +128,8 @@
     border: 3px solid #a5a1a1;
     border-radius: 25px;
     width: 300px;
-    height: 270px;
-    padding: 15px;
+    height: 450px;
+    padding: 15px 0;
 }
 .box__card img{
     width: 200px;
