--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,8 @@
 body{
     width: 100%;
     background-color: #424242de;
+    background-image: url(./assets/img/images/auto-deportivo2.webp);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
