--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -9,6 +9,11 @@
     z-index: -1;
   }
   
+  .pie-pagina{
+    border-top: solid 2px #f0f0f0;
+    border-radius: 20px;
+  }
+
   .pie-pagina .grupo-1{
     width: 100%;
     max-width: 1200px;
