--- a/src/Page/Contacto.css
+++ b/src/Page/Contacto.css
@@ -9,7 +9,7 @@
 #form-container{
     width:75%;
     margin:50px auto;
-    background-color:#fff;
+    background-color:rgba(255, 255, 255, 0.356);
     border-radius:25px;
     
 }
