--- a/src/Page/Inicio.css
+++ b/src/Page/Inicio.css
@@ -10,7 +10,7 @@
     height: auto;
 }
 .box__img{
-    background-image: url('../assets/img/images/backg2.jpg');
+    background-image: url('../assets/img/images/auto-deportivo2.webp');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
