--- a/src/Components/Cart.css
+++ b/src/Components/Cart.css
@@ -70,15 +70,15 @@
     border: none;
     outline: none;
     color: white;
-    background-color: skyblue;
+    background-color: rgb(95, 95, 95);
     border-radius: 5px;
     cursor: pointer;
   }
   .cart_box div:nth-child(3) button:hover {
-    background-color: darkseagreen;
+    background-color: rgb(70, 141, 137);
   }
   .cart_box div:nth-child(3) span {
-    background-color: lightgreen;
+    background-color: rgb(111, 170, 204);
     padding: 5px 10px;
     border-radius: 5px;
     margin-right: 10px;
@@ -96,14 +96,14 @@
   
   .total span:nth-child(1) {
     font-size: 2rem;
-    color: skyblue;
+    color: rgb(223, 223, 223);
     font-weight: bold;
     letter-spacing: 2px;
   }
   
   .total span:nth-child(2) {
     font-size: 2rem;
-    color: green;
+    color: rgb(238, 238, 238);
     font-weight: bold;
   }
   
