--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,6 @@ body{
     background-size: cover;
     background-attachment: fixed;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
